--- a/independent-candidate-manifesto-2019.ipynb
+++ b/independent-candidate-manifesto-2019.ipynb
@@ -57,7 +57,7 @@
     }
    ],
    "source": [
-    "filename = 'Manifesto/manibook'\n",
+    "filename = 'manibook'\n",
     "open_filename = open(filename, 'rb')\n",
     "\n",
     "ind_manifesto = PyPDF2.PdfFileReader(open_filename)\n"
