--- a/independent-candidate-manifesto-2019.ipynb
+++ b/independent-candidate-manifesto-2019.ipynb
@@ -464,7 +464,7 @@
     "import nltk\n",
     "\n",
     "# Image used in which our world cloud output will be\n",
-    "img1 = imageio.imread(\"Manifesto/itula.jpeg\")\n",
+    "img1 = imageio.imread(itula.jpeg\")\n",
     "hcmask1 = img1\n",
     "\n",
     "# Get 100 words based on the \n",
@@ -535,7 +535,7 @@
    "source": [
     "## **8. Text Summarization of the Document**\n",
     "\n",
-    "![title](Manifesto/text_summary.png)\n",
+    "![title](text_summary.png)\n",
     "\n",
     "\n",
     "Text summarization is an important NLP task which is a way of producing a concise and fluent summary of a perticular textin an article, journal, book, comment review, etc while also preseving the key information and overall meaning. Its is divided into categories, i.e., **extraction** and **abstraction**. Extractive methods select a subset of existing words, phrases, or sentences in the original text to form a summary. In contrast, abstractive methods first build an internal semantic representation and then use natural language generation techniques to create a summary.\n",
@@ -926,7 +926,7 @@
     "This can be done for all the remaining topics to see wether we can come up with a close judgement of each topic.\n",
     "\n",
     "\n",
-    "![titile](Manifesto/topic_model.png)"
+    "![titile](topic_model.png)"
    ]
   },
   {
